# whisper_streaming

./: README.md  out.txt  pyproject.toml  requirements.txt  whisper_online.py
